ensure we don't run into corner cases in Qt for font sizes

BUG: 500766